<resources>
    <string name="app_name">Health Fit </string>
    <string name="view_your_diet_plan">View your diet plan</string>
    <string name="delete_your_plan">Delete your plan</string>
    <string name="add_your_plan">Add your plan</string>
    <string name="update_your_daily_plan">Update your daily plan</string>
    <string name="dinner">Dinner</string>
    <string name="eg_chicken_chappatti">eg: Chicken, Chappatti...</string>
    <string name="enter_your_dinner_items">Enter your DINNER items</string>
    <string name="eg_pulses_rice">eg: Pulses, Rice...</string>
    <string name="enter_your_lunch_items">Enter your lunch items</string>
    <string name="eg_boiled_eggs_potato">eg: Boiled eggs, Potato...</string>
    <string name="enter_your_breakfast">Enter your breakfast</string>
    <string name="eg_monday_tuesday">eg: Monday, Tuesday...</string>
    <string name="enter_day">Enter Day</string>
    <string name="please_add_your_daily_meals">Please add your daily meals</string>
    <string name="health_fit">Health Fit</string>
    <string name="meal_plan_for">Meal plan for</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_a_new_acount">Create a new Acount!</string>
    <string name="day">Day :</string>
    <string name="breakfast">Breakfast :</string>
    <string name="lunch">Lunch :</string>
    <string name="snacks">Snacks :</string>
    <string name="dinner_day">Dinner :</string>
    <string name="please_enter_your_name">Please Enter your name</string>
    <string name="first_name">First Name</string>
    <string name="please_enter_email_id">Please Enter Email ID</string>
    <string name="email_reg">Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="password_reg">Password</string>
    <string name="please_re_enter_password_reg">Please Re-Enter Password</string>
    <string name="re_enter_password_reg">Re-Enter Password</string>
    <string name="paid_for_premium">Paid For Premium</string>
    <string name="register">Register</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
</resources>