<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#0C0A0E"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0C0A0E"
        tools:context=".Exercise">

        <Button
            android:id="@+id/Start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardview_light_background"
            android:text="@string/start"
            android:layout_marginStart="70dp"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@id/reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/cardview_light_background"
            android:text="@string/reset"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/Start"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="90dp"
            android:scaleType="fitXY"
            android:src="@drawable/squat_stand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="408dp"
            android:layout_height="195dp"
            android:layout_marginTop="96dp"
            app:layout_constraintBottom_toBottomOf="@+id/Start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/plank"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/beginner"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>